--- a/React/blog--redux--js/.eslintrc.json
+++ b/React/blog--redux--js/.eslintrc.json
@@ -25,6 +25,7 @@
       "max-len": ["error", { "code": 120 }],
       "no-unused-vars": "warn",
       "jsx-a11y/label-has-associated-control": "off",
-      "jsx-a11y/control-has-associated-label": "off"
+      "jsx-a11y/control-has-associated-label": "off",
+      "no-param-reassign": "off"
     }
 }
