--- a/React/blog--redux--js/package.json
+++ b/React/blog--redux--js/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "mock-socket": "^9.1.5",
     "msw": "^0.49.2",
