--- a/React/blog--redux--js/.eslintrc.json
+++ b/React/blog--redux--js/.eslintrc.json
@@ -1,31 +1,35 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "jest/globals": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb"
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest/globals": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb"
+  ],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "jest"
+  ],
+  "rules": {
+    "import/prefer-default-export": "off",
+    "react/require-default-props": "off",
+    "no-use-before-define": "off",
+    "max-len": [
+      "error",
+      {
+        "code": 120
+      }
     ],
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "jest"
-    ],
-    "rules": {
-      "import/prefer-default-export": "off",
-      "react/require-default-props": "off",
-      "no-use-before-define": "off",
-      "max-len": ["error", { "code": 120 }],
-      "no-unused-vars": "warn",
-      "jsx-a11y/label-has-associated-control": "off",
-      "jsx-a11y/control-has-associated-label": "off",
-      "no-param-reassign": "off"
-    }
+    "no-unused-vars": "warn",
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/control-has-associated-label": "off",
+    "no-param-reassign": "off"
+  }
 }
