--- a/React/blog--redux/.vscode/settings.json
+++ b/React/blog--redux/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
-  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "editor.formatOnSave": true,
-  "eslint.alwaysShowStatus": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
-  }
+  },
+  "eslint.format.enable": true,
 }
