--- a/React/blog--redux/package.json
+++ b/React/blog--redux/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "date-fns": "^2.30.0",
+    "mock-socket": "^9.2.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "seedrandom": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.1",
+    "@mswjs/data": "^0.12.0",
+    "@types/seedrandom": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "eslint": "^8.40.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
