--- a/React/blog--redux/.env.development
+++ b/React/blog--redux/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8080/api
-REACT_APP_IS_TEST_MODE_ENABLED=false
+REACT_APP_API_URL=http://localhost:3000/fakeApi # REACT_APP_API_URL=http://localhost:8080/api
+REACT_APP_IS_TEST_MODE_ENABLED=true
