--- a/React/blog--redux/package.json
+++ b/React/blog--redux/package.json
@@ -60,5 +60,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "typescript": "^4.9.5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
